cmake_minimum_required(VERSION 3.21)
project(Algorithm_boj)

set(CMAKE_CXX_STANDARD 14)

add_executable(Algorithm_boj
        #10026.cpp
        #7562.cpp
        #13913.cpp
        #1259.cpp
        #2573.cpp
        #2583.cpp
        #5427.cpp
        #1629.cpp
        #11729.cpp
        #1074.cpp
        #17478.cpp
        #1780.cpp
        #2630.cpp
        #1992.cpp
        #2447.cpp
        #15649.cpp
        #9663.cpp
        #1182.cpp
        #15650.cpp
        #15651.cpp
        #15652.cpp
        #15654.cpp
        #15655.cpp
        #15656.cpp
        #15657.cpp
        #15663.cpp
        15664.cpp)
